--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -7,7 +7,7 @@
     <title>URL - TinyApp Example</title>
   </head>
   <body>
-    <% include('partials/_header') %>
+    <%- include('partials/_header') %>
     <div class="card text-center">
       <div class="card-header">URL Details</div>
       <div class="card-body">
