--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -7,7 +7,7 @@
     <title>My URLs</title>
   </head>
   <body>
-    <% include('partials/_header') %>
+    <%- include('partials/_header') %>
     <main style="margin: 1em;">
       <h3>My URLs</h3>
       <table class="table">
