--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -10,23 +10,35 @@
     <%- include('partials/_header') %>
     <main style="margin: 1em;">
       <h3>My URLs</h3>
-      <table class="table">
-        <thead>
+      <table class="table table-bordered table-striped">
+        <thead class="thead-dark">
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
-          <% for (let id in urls) { %>
+          <% if (Object.keys(urls).length === 0) { %>
             <tr>
-              <td><a href="/urls/<%= id %>"><%= id %></a></td>
-              <td><%= urls[id] %></td>
+              <td colspan="3" class="text-center">No URLs available. Create one!</td>
             </tr>
+          <% } else { %>
+            <% for (const id in urls) { %>
+              <tr>
+                <td><a href="/u/<%= id %>"><%= id %></a></td>
+                <td><%= urls[id] %></td>
+                <td>
+                  <form method="POST" action="/urls/<%= id %>/delete">
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                  </form>
+                </td>
+              </tr>
+            <% } %>
           <% } %>
         </tbody>
       </table>
-      <a href="#" class="btn btn-primary">Create New URL</a>
+      <a href="/urls/new" class="btn btn-primary">Create New URL</a>
     </main>
   </body>
 </html>
