added edit form to urls_show.ejs

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -4,19 +4,26 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" />
-    <title>URL - TinyApp Example</title>
+    <title>TinyApp Example</title>
   </head>
   <body>
     <%- include('partials/_header') %>
-    <div class="card text-center">
-      <div class="card-header">URL Details</div>
-      <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-        <p class="card-text">
-          Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
-        </p>
-        <a href="#" class="btn btn-primary">Create New URL</a>
-      </div>
-    </div>
+    <main style="margin: 1em;">
+      <h3>TinyURL for: <%= longURL %></h3>
+      <p>Short URL ID: <a href="/u/<%= id %>"><%= id %></a></p>
+
+      <h4>Edit</h4>
+      <form method="POST" action="/urls/<%= id %>">
+        <label for="longURL">New URL:</label>
+        <input
+          id="longURL"
+          name="longURL"
+          type="text"
+          value="<%= longURL %>"
+          style="width: 300px; margin: 1em;"
+        />
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </main>
   </body>
 </html>
