--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -15,6 +15,7 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
             <th scope="col">Delete</th>
           </tr>
         </thead>
@@ -29,13 +30,15 @@
                 <td><a href="/u/<%= id %>"><%= id %></a></td>
                 <td><%= urls[id] %></td>
                 <td>
+                  <a href="/urls/<%= id %>" class="btn btn-primary">Edit</a>
+                </td>
+                <td>
                   <form method="POST" action="/urls/<%= id %>/delete">
                     <button type="submit" class="btn btn-danger">Delete</button>
                   </form>
                 </td>
               </tr>
             <% } %>
-          <% } %>
         </tbody>
       </table>
       <a href="/urls/new" class="btn btn-primary">Create New URL</a>
