--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,9 +1,14 @@
-<header>
-  <nav class="navbar navbar-expand-md navbar-dark bg-success">
-    <a class="navbar-brand" href="/urls">TinyApp</a>
-    <div class="navbar-nav">
-      <a class="nav-item nav-link" href="/urls">My URLs</a>
-      <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-    </div>
-  </nav>
+<header class="navbar navbar-expand-lg navbar-light bg-success">
+  <a class="navbar-brand text-white" href="/urls">TinyApp</a>
+  <div class="ml-auto">
+    <form method="POST" action="/login" class="form-inline">
+      <input
+        type="text"
+        name="username"
+        placeholder="Username"
+        class="form-control mr-2"
+      />
+      <button type="submit" class="btn btn-primary">Login</button>
+    </form>
+  </div>
 </header>
