--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,9 @@
 <header class="navbar navbar-expand-lg navbar-light bg-success">
   <a class="navbar-brand text-white" href="/urls">TinyApp</a>
+  <nav class="navbar-nav ml-3">
+    <a class="nav-link text-white" href="/urls">My URLs</a>
+    <a class="nav-link text-white" href="/urls/new">Create New URL</a>
+  </nav>
   <div class="ml-auto">
     <% if (cookies.username) { %>
       <span class="text-white mr-3">Welcome, <%= cookies.username %>!</span>
