--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -5,8 +5,11 @@
     <a class="nav-link text-white" href="/urls/new">Create New URL</a>
   </nav>
   <div class="ml-auto">
-    <% if (cookies.username) { %>
-      <span class="text-white mr-3">Welcome, <%= cookies.username %>!</span>
+    <% if (username) { %>
+      <span class="text-white mr-3">Logged in as: <%= username %>!</span>
+      <form method="POST" action="/logout" class="form-inline d-inline">
+        <button type="submit" class="btn btn-outline-light">Logout</button>
+      </form>
     <% } else { %>
       <form method="POST" action="/login" class="form-inline">
         <input
