--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,6 +1,6 @@
 <header class="navbar navbar-expand-lg navbar-light bg-success">
   <a class="navbar-brand text-white" href="/urls">TinyApp</a>
-  <nav class="navbar-nav ml-3">
+  <nav class="navbar-nav">
     <a class="nav-link text-white" href="/urls">My URLs</a>
     <a class="nav-link text-white" href="/urls/new">Create New URL</a>
   </nav>
