--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
   </head>
   <body>
+    <%- include("_header") %> 
     <div class="container">
       <h2 class="mt-4">Register</h2>
       <form method="POST" action="/register">
